<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edmonton Wifi</string>

    <!-- Menu Strings -->
    <string name="menu_sort_wifi_list">Sort By</string>
    <string name="menu_search">Search Wifis</string>
    <string name="menu_clear_search_history">Clear Search History</string>

    <!-- Sort List of Wifi Dialog Array -->
    <!--
         If you're changing this make sure to also change
            the array in SortWifiListDialogFragment
    -->
    <string-array name="array_sort_entries">
        <item>Distance</item>
        <item>Address</item>
        <item>Name</item>
    </string-array>
    <string-array name="array_sort_values">
        <item>distance</item>
        <item>address</item>
        <item>name</item>
    </string-array>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>

    <string-array name="navigation_drawer_tabs">
        <item>Wifi</item>
        <item>Construction</item>
    </string-array>

    <!-- ListView Strings -->
    <string name="wifi_list_name">Name</string>
    <string name="wifi_list_distance">Distance</string>
    <string name="wifi_list_address">Address</string>

    <!-- Search Strings -->
    <string name="search_hint">Search Wifis</string>
    <string name="search_label">MainActivitySearch</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_wifi_view">WifiViewActivity</string>

    <!-- WifiViewActivity Strings -->
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="status">Status</string>
    <string name="facility">Facility</string>
    <string name="provider">Provider</string>
    <string name="distance">Distance</string>
    <string name="open_in_maps">Open in maps</string>
    <string name="copy">Copy Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Preferences Strings -->
    <!-- Preference Categories -->
    <string name="preference_category_global">Global</string>

    <!-- Global Preferences -->
    <string name="preference_global_sort">Sort</string>
    <string name="preference_global_sort_dialog">Sort Locations by</string>
    <string name="preference_global_sort_default">distance</string>
    <string name="title_activity_construction">ConstructionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>