<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hey.rich.edmontonwifi.MainActivity" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>

    <!-- Disabled until this is implemented with fragments -->
    <item
        android:id="@+id/menu_sort_wifi_list"
        android:orderInCategory="200"
        android:enabled="false"
        android:showAsAction="never"
        android:title="@string/menu_sort_wifi_list"/>

    <item
        android:id="@+id/menu_clear_search_history"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/menu_clear_search_history"/>

</menu>