<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hey.rich.edmontonwifi.WifiViewActivity$PlaceholderFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wifi_view_middle_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/wifi_view_wifi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:padding="5dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wifi_view_wifi_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wifi_view_wifi_title"
            android:layout_below="@+id/wifi_view_wifi_title"
            android:maxLines="2"
            android:padding="5dp"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wifi_view_wifi_facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wifi_view_wifi_address"
            android:layout_below="@+id/wifi_view_wifi_address"
            android:padding="5dp"
            android:text="@string/facility"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wifi_view_wifi_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wifi_view_wifi_facility"
            android:layout_below="@+id/wifi_view_wifi_facility"
            android:padding="5dp"
            android:text="@string/provider"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/wifi_view_wifi_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wifi_view_wifi_provider"
            android:layout_below="@+id/wifi_view_wifi_provider"
            android:padding="5dp"
            android:text="@string/distance"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/wifi_view_middle_view"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/wifi_view_wifi_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_view_middle_view"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/open_in_maps" />

    <Button
        android:id="@+id/wifi_view_wifi_clipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_view_wifi_maps"
        android:layout_centerHorizontal="true"
        android:text="@string/copy" />

    <Button
        android:id="@+id/wifi_view_wifi_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_view_wifi_clipboard"
        android:layout_centerHorizontal="true"
        android:text="@string/remove_from_wifis" />

</RelativeLayout>